# del

./: AUTHORS  INSTALL  Makefile.am  README.md  configure.ac
math/: Makefile.am
scripts/: Makefile.am
src/: Makefile.am
